@@ -1,5 +1,12 @@
 2009-06-04  Milan Zamazal  <pdm@brailcom.org>
 
+	* lib/pytis/data/access.py:
+	* lib/pytis/data/types_.py:
+	* lib/pytis/presentation/field.py:
+	SecretValue.conceal changed to Value.reconceal.
+
+2009-06-04  Milan Zamazal  <pdm@brailcom.org>
+
 	* lib/pytis/form/inputfield.py:
 	* lib/pytis/presentation/field.py:
 	Don't display secret values in editable input fields.
